--- a/index-3.html
+++ b/index-3.html
@@ -736,6 +736,7 @@
       </div>
     </section><!-- End F.A.Q Section -->
     <!-- ======= Recent Blog Posts Section ======= -->
+    <!-- add comit -->
     <section id="recent-blog-posts" class="recent-blog-posts">
 
       <div class="container" data-aos="fade-up">
